---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1094                                 -
---------------------------------------------
- 2021-06-14                                -
---------------------------------------------
.: WSW: Task - Notification of orders (WSW-123)

- v1.0.1093                                 -
---------------------------------------------
- 2021-06-06                                -
---------------------------------------------
.: WSW: Task - Add Prometheus to backend in order to monitor the health of website (WSM-357)

- v1.0.10923                                -
---------------------------------------------
- 2021-05-23                                -
---------------------------------------------
.: WSM: Task - Showing the number of the products which is going to be prepared in In Progress phase (WSM-352)

---------------------------------------------
- 2021-05-22                                -
---------------------------------------------
.: WSW: Task - Retrieve user details to place order + save inserted details (WSW-115)
.: WSW: Task - Link the order button in website to local shopping (WSW-116)

---------------------------------------------
- 2021-05-20                                -
---------------------------------------------
.: WSM: Task - Fix QRcode in production (WSM-370)

- v1.0.10922                                -
---------------------------------------------
- 2021-05-17                                -
---------------------------------------------
.: WSM: Task - Improvement: Profile images for item (WSM-367)

- v1.0.10921                                -
---------------------------------------------
- 2021-05-11                                -
---------------------------------------------
.: WSW: Task - Display default store profile image (WSW-111)

---------------------------------------------