@@ -11,23 +11,27 @@ export class AuthNotificationUserService {
 
   constructor(private _zone: NgZone, private http: HttpClient) { }
 
-  getEventSource(url: string): EventSource {
-    return new EventSource(url);
-  }
-  getNotificationStream() {
-    return new Observable(observer => {
-      const eventSource = this.getEventSource(AuthNotificationUserUrl.getNotificationStreamUrl);
-      eventSource.onmessage = event => {
-        this._zone.run(() => {
-          observer.next(event);
-        });
-      };
-      eventSource.onerror = error => {
-        this._zone.run(() => {
-          observer.error(error);
-        });
-      }
-    });
+  // temp disable sse
+  // getEventSource(url: string): EventSource {
+  //   return new EventSource(url);
+  // }
+  // getNotificationStream() {
+  //   return new Observable(observer => {
+  //     const eventSource = this.getEventSource(AuthNotificationUserUrl.getNotificationStreamUrl);
+  //     eventSource.onmessage = event => {
+  //       this._zone.run(() => {
+  //         observer.next(event);
+  //       });
+  //     };
+  //     eventSource.onerror = error => {
+  //       this._zone.run(() => {
+  //         observer.error(error);
+  //       });
+  //     }
+  //   });
+  // }
+  checkNotifications(obj) {
+    return this.http.post(AuthNotificationUserUrl.checkNotificationsUrl, obj);
   }
   getNotifications() {
     return this.http.get(AuthNotificationUserUrl.getNotificationsUrl + '/?from=website');
