@@ -4,6 +4,11 @@
 
 - v1.0.1094                                 -
 ---------------------------------------------
+- 2021-06-20                                -
+---------------------------------------------
+.: WSW: Task - Update to use long polling to get notification (WSW-123)
+
+---------------------------------------------
 - 2021-06-14                                -
 ---------------------------------------------
 .: WSW: Task - Notification of orders (WSW-123)
